# qa_guru_diplom_mobile

./: README.md  config.emulator.env  config.local.env  config.personal.env.example  config.py  config.test.env  config.test.env.browserstack  pyproject.toml  pytest.ini
mobile_tests/utils/allure/: attach.py
mobile_tests/utils/python/: monkey.py
tests/: conftest.py
tests/android/: test_wikipedia.py
